<resources>
    <string name="app_name">Sharebook</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter at least 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Delete account</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Sharebook</string>
    <string name="title_activity_login">Login</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Full name</string>
    <string name="hint_username">Username</string>

    <string name="btn_login">LOGIN</string>
    <string name="prompt_password">Please enter your password</string>
    <string name="btn_link_to_register">Not a member? Get registered in Sharebook now!</string>
    <string name="btn_link_to_login">Already registered. Log me in!</string>
    <string name="title_activity_reset_password">Reset Password</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to send password reset instructions.</string>
    <string name="email_id">Email ID</string>
    <string name="username_id">Username</string>

    <string name="imgPhoto">Photo of book</string>

    <string name="btnAddbook">Add book</string>

    <string name="btnBookbrowser">Bookbrowser</string>
    <string name="btnBookshelf">Bookshelf</string>

    <string name="btnBack">Back</string>
    <string name="btnBB">Book Browser</string>

    <string name="etBookname">Bookname</string>
    <string name="etAuthor">Author</string>
    <string name="etPublisher">Publisher</string>
    <string name="etISBN">ISBN</string>
    <string name="etPrice">Price</string>
    <string name="etContact">Contact</string>
    <string name="btnAdd">Add</string>

    <string name="search_edit_text">What do you want to read today?</string>

    <string name="spnrGenre_prompt">Genre</string>
    <string-array name="spnrGenre_arrays">
        <item>Drama</item>
        <item>Fiction</item>
        <item>Nonfiction</item>
        <item>Poetry</item>
        <item>Comedy</item>
        <item>Tragedy</item>
        <item>Fantasy</item>
        <item>Folklore</item>
        <item>Mystery</item>
        <item>Realistic fiction</item>
        <item>Romance</item>
        <item>Science fiction</item>
        <item>Thriller</item>
        <item>Biography</item>
        <item>Autobiography</item>
        <item>Narrative nonfiction</item>
        <item>Periodicals</item>
        <item>Reference</item>
        <item>Lyric</item>
        <item>Narrative poetry</item>
        <item>Dramatic</item>
        <item>Other</item>
    </string-array>
    <string name="title_activity_btwbookbrowser">BTWbookbrowser</string>
    <string name="action_settings">Settings</string>

    <string name="hello_world">Hello world!</string>
    <!-- -
        This is an ad unit ID for a banner test ad. Replace with your own banner ad unit id.
        For more information, see https://support.google.com/admob/answer/3052638
    <!- -->
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
</resources>
